build: added gtk dep

--- a/AUR/PKGBUILD
+++ b/AUR/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Daniel Dada <dan@binarygoose.dev>
 pkgname=clrsync
-pkgver=0.1.4
+pkgver=0.1.5
 pkgrel=1
 pkgdesc="Color scheme manager"
 arch=('x86_64')
@@ -14,6 +14,7 @@ depends=(
     mesa
     libglvnd
     libxcursor
+    gtk3
 )
 
 makedepends=(
@@ -26,6 +27,7 @@ makedepends=(
   libxcursor
   wayland
   wayland-protocols
+  gtk3
 )
 
 source=("$pkgname-$pkgver.tar.gz::https://github.com/obsqrbtz/clrsync/archive/refs/tags/v$pkgver.tar.gz")
