--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -49,7 +49,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y cmake build-essential git \
             libglfw3-dev libfreetype6-dev libfontconfig1-dev \
-            libx11-dev libxrandr-dev libxi-dev \
+            libx11-dev libxrandr-dev libxi-dev libgtk-3-dev \
             mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev \
             libxinerama-dev libxcursor-dev libxkbcommon-dev
 
@@ -86,7 +86,7 @@ jobs:
             libX11-devel libXrandr-devel libXi-devel \
             mesa-libGL-devel mesa-libGLU-devel \
             libXinerama-devel libXcursor-devel \
-            wayland-devel wayland-protocols-devel
+            wayland-devel wayland-protocols-devel gtk3-devel
 
       - name: Configure CMake
         run: cmake -B build -DCMAKE_BUILD_TYPE=Release -DUSE_SYSTEM_GLFW=ON
